# STM32_GuitarEffector

./: .mxproject  AGENTS.md  Audio_Architecture_Plan.md  CMakeLists.txt  Guitar_Effect.ioc  STM32F411XX_FLASH.ld  cmake_backup.txt  test_cab_sim.c  test_cab_sim2.c  test_dsp.c
APP/: AudioPipeline.c  AudioPipeline.h  KeyCtrl.c  KeyCtrl.h  cdc_command.c  cdc_command.h  encoder.c  encoder.h  mode_ctrl.c  mode_ctrl.h  pot.c  pot.h  settings.c  settings.h  tft.c  tft.h  tone_test.c  tone_test.h
APP/model/: effect.h  effect_chain.c  effect_chain.h
Core/Inc/: i2c.h  i2s.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  dma.c  gpio.c  i2c.c  i2s.c  main.c  spi.c  stm32f4xx_it.c  tim.c
Drivers/WM8978/: wm8978.c  wm8978.h  wm8978_port.c  wm8978_port.h  wm8978_reg.c  wm8978_reg.h
USB_DEVICE/App/: usbd_cdc_if.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  tmp_cmake.txt
docs/: DEBUG_LOG_Convolution.md  PCB_Layout_Guide.md  TVS_vs_ESD_对比.md  cab_sim_debug_notes.md  按键-状态-编码器设计.md
matlab/: cab_sim_design.m  ir_to_c.m  verify_biquad.m  wav2c.m  wav2c_gunshot.m
notes/: project_setup_notes.md
reference/audio-multieffect/: openocd.cfg
reference/wm8978_pages/: page_002.txt  page_003.txt  page_005.txt  page_007.txt  page_008.txt  page_010.txt  page_011.txt  page_016.txt  page_017.txt  page_018.txt  page_021.txt  (+51 more)
tools/: allpass_plot.py  allpass_series.py  comb_and_lpf.py  comb_comparison.py  comb_filter_response.py  comb_g_comparison.py  comb_lpf_topology.py  damped_comb_parallel.py  damped_comb_response.py  fb_comb_response.py  ff_comb_g.py  four_combs.py  four_combs_visible.py  lpf_response.py  notch_comb.py  schroeder_topology.py
(+87 files in other folders)
